complete home screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   shared_preferences: ^2.0.15
   font_awesome_flutter:   ^10.1.0
   carousel_slider:
+  url_launcher:
+  flutter_inappwebview:
 
 dev_dependencies:
   flutter_test:
